--- a/vignettes/C.rmd
+++ b/vignettes/C.rmd
@@ -25,8 +25,6 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 # precrec: precision-recall curve statistics
 library(precrec)
-# cowplot: Formatting graphical plots
-library(cowplot)
 ```
 
 ### Set up the 80/20 training/test holdout resampling.
@@ -197,3 +195,9 @@ confMatDf[1:10,]
 #  9   497   303     2     8   0.8 0.621 0.0257 0.996  0.75     2
 # 10   570   230     4     6   0.6 0.712 0.0254 0.993  1        2
 ```
+
+**References**
+
+Package citations, enter in R console: ?predictSuiattPsyCoLaus::predictSuiattPsyCoLaus
+
+Then, on that help page, scroll down to References.
