--- a/vignettes/F.rmd
+++ b/vignettes/F.rmd
@@ -296,3 +296,7 @@ calibDf[idxOutlier,]
 Austin, P. C., & Steyerberg, E. W. (2019). The Integrated Calibration Index (ICI) and related metrics for quantifying the calibration of logistic regression models. *Statistics in medicine, 38(21)*, 4051-4065, [https://doi.org/10.1002/sim.8281](https://doi.org/10.1002/sim.8281).
 
 Saito, T., & Rehmsmeier, M. (2015). The precision-recall plot is more informative than the ROC plot when evaluating binary classifiers on imbalanced datasets. *PloS one, 10(3)*, e0118432, [https://doi.org/10.1371/journal.pone.0118432](https://doi.org/10.1371/journal.pone.0118432).
+
+Package citations, enter in R console: ?predictSuiattPsyCoLaus::predictSuiattPsyCoLaus
+
+Then, on that help page, scroll down to References.
