--- a/vignettes/C.rmd
+++ b/vignettes/C.rmd
@@ -1,7 +1,7 @@
 ---
 title: "C: Logistic regression"
 author: Marcel Miché
-date: 2023-06-02
+date: 2023-07-31
 output:
   html_document:
     theme: yeti
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## All code to obtain predictions, using logistic regression
 
-**Note** that all computations from vignette B must have been finished, before continuing with the below code.
+**Note** that data simulation from vignette B must have been finished, before continuing with the below code.
 
 ### Load required R packages (install first, if not yet installed)
 ```{r echo=TRUE, eval = FALSE}
@@ -67,18 +67,18 @@ twoSplit <- function(nonEventID=NULL, eventID=NULL,
                                     testN))
     # Use the current seed to ensure perfect reproducibility.
     set.seed(seed)
-    # Shake the neat vector nonEventSelect up. The 1s and 2s will then be scattered all over the place.
+    # Randomly sample from the vector nonEventSelect. The 1s and 2s will then be scattered all over the place.
     nonEventSample <- sample(nonEventSelect)
     
-    # Do the same thing to the vector eventSelect, what you just did to the vector nonEventSelect.
     set.seed(seed)
+    # Randomly sample from the vector eventSelect, same as before with vector nonEventSelect.
     eventSample <- sample(eventSelect)
     
-    # Use the shaken up variables to randomly select the training cases.
+    # From the random samples, pick the training cases.
     train <- c(nonEventID[nonEventSample==1],
                eventID[eventSample==1])
     
-    # Use the shaken up variables to randomly select the test cases.
+    # From the random samples, pick the test cases.
     test <- c(nonEventID[nonEventSample==2],
               eventID[eventSample==2])
     
@@ -106,7 +106,9 @@ set.seed(1)
 # Sample 100 different seeds. Each seed will be used for one resampling iteration.
 seeds20230324 <- sample(x=2:1984657, size=100)
 
-# AUCs: AUROC and PRAUC (use precrec package)
+# AUCs: use precrec package
+# ROC AUC is the name in the main article. ROC Receiver operating characteristic AUC Area under the curve
+# PR AUC is the name in the main article. PR Precision-recall AUC Area under the curve.
 AUCs <- c()
 # confMatLs: confusion matrices collected in a list,
 confMatLs <- list()
