--- a/vignettes/D.rmd
+++ b/vignettes/D.rmd
@@ -1,7 +1,7 @@
 ---
 title: "D: Classification and regression trees (CART)"
 author: Marcel Miché
-date: 2023-06-02
+date: 2023-07-31
 output:
   html_document:
     theme: yeti
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## All code to obtain predictions, using CART
 
-**Note** that all computations from vignette B must have been finished, before continuing with the below code.
+**Note** that data simulation from vignette B must have been finished, before continuing with the below code.
 
 ### Load required R packages (install first, if not yet installed)
 ```{r echo=TRUE, eval = FALSE}
@@ -67,18 +67,18 @@ twoSplit <- function(nonEventID=NULL, eventID=NULL,
                                     testN))
     # Use the current seed to ensure perfect reproducibility.
     set.seed(seed)
-    # Shake the neat vector nonEventSelect up. The 1s and 2s will then be scattered all over the place.
+    # Randomly sample from the vector nonEventSelect. The 1s and 2s will then be scattered all over the place.
     nonEventSample <- sample(nonEventSelect)
     
-    # Do the same thing to the vector eventSelect, what you just did to the vector nonEventSelect.
     set.seed(seed)
+    # Randomly sample from the vector eventSelect, same as before with vector nonEventSelect.
     eventSample <- sample(eventSelect)
     
-    # Use the shaken up variables to randomly select the training cases.
+    # From the random samples, pick the training cases.
     train <- c(nonEventID[nonEventSample==1],
                eventID[eventSample==1])
     
-    # Use the shaken up variables to randomly select the test cases.
+    # From the random samples, pick the test cases.
     test <- c(nonEventID[nonEventSample==2],
               eventID[eventSample==2])
     
@@ -280,7 +280,7 @@ for(i in 1:length(testLs)) {
 }
 ```
 
-### Formatting of all results into a single dataset.
+### Extract all results and produce a single results' dataset.
 ```{r echo=TRUE, eval = FALSE}
 # Final computation, use list cartLs to collect the results.
 cartLs <- list()
