--- a/vignettes/E.rmd
+++ b/vignettes/E.rmd
@@ -1,7 +1,7 @@
 ---
 title: "E: Compute and display clinical utility results"
 author: Marcel Miché
-date: 2023-06-02
+date: 2023-07-31
 output:
   html_document:
     theme: yeti
@@ -60,7 +60,7 @@ nbModFun <- function(tp=NULL, fp=NULL, FPwt=NULL) {
 
 ## Custom function to compute the clinical utility results for a classification prediction model.
 ```{r echo=TRUE, eval = FALSE}
-# Argument confMatDf = confusion matrix data.frame. That is, confMatDf contains 10 columns, 8 of which comprise the confusion matrix or are directly computed on the basis of the confusion matrix.
+# Argument confMatDf = confusion matrix data.frame. That is, confMatDf contains 10 columns, 8 of which comprise the confusion matrix or are directly computed on the basis of the confusion matrix, e.g., sensitivity.
 computeResults <- function(confMatDf=NULL) {
     # Append a distinct column that shows the seven unique levels of threshold probabilities (logreg) or harm-to-benefit ratios (CART).
     confMatDf$level <- rep(1:7, times=100)
@@ -82,6 +82,11 @@ computeResults <- function(confMatDf=NULL) {
 }
 ```
 
+**Note**: Delta net benefit, in our study, is defined as the result from comparing the increase in true positives of the prediction model and:
+
+* treat all, for threshold probabilities 0.5%, 0.75%, and 1% (which are all below the outcome rate of 1.23% in the test dataset).
+* treat none, for threshold probabilities 1.25%, 1.5%, 1.75%, and 2% (which are all above the outcome rate of 1.23% in the test dataset).
+
 ## Apply this custom function to the 100 cross-validated predictions
 
 ### Logistic regression
@@ -98,7 +103,7 @@ CARTcompleted <- computeResults(predictSuiattPsyCoLaus::CART700)
 
 ## Display the summarized results
 
-For each probability threshold (or harm-to-benefit ratio), compute minimum, median, and maximum net benefit.
+For each probability threshold (or harm-to-benefit ratio), compute median, maximum, and minimum net benefit.
 ```{r echo=TRUE, eval = FALSE}
 # Logistic regression
 (logregNB <- logregCompleted %>%
@@ -197,7 +202,7 @@ print(dcaDf, n=nrow(dcaDf))
 
 ## Plot the (median) decision curves
 
-Median are in paranthesis because this refers only to the net benefit of logistic regression and CART. That is, net benefit for treat all and treat none remains the same across all 100 cross-validations.
+Median is in paranthesis because this refers only to the net benefit of logistic regression and CART. That is, net benefit for treat all and treat none remains constant across all 100 cross-validations (because in each cross-validation subsample, there are exactly 10 outcome cases among 810 individuals).
 ```{r echo=TRUE, eval = FALSE}
 # Custom function to convert threshold probability to harm-to-benefit ratio.
 htbPlot <- function(x) paste0("1:", round((1-x)/x, digits=1))
@@ -236,11 +241,11 @@ ggplot(data=dcaDf, aes(x=threshold, y=net_benefit, colour=label)) +
     labs(x="Threshold probability")
 ```
 
-**Note.** The plot itself is shown in the publication and/or the other supplementary material. You can generate the plot yourself by using the R script 'E_DisplayResults', which is part of this supplementary R package (see folder 'rscriptsVignettes').
+**Note.** The plot itself is shown in the main article and/or the supplementary material 1. You can generate the plot yourself by using the R script 'E_DisplayResults', which is part of this supplementary material 2 (R package, see folder 'rscriptsVignettes' on the GitHub page).
 
 ## Compute delta net benefit and present the summarized results
 
-For each probability threshold (or harm-to-benefit ratio), compute minimum, median, and maximum delta net benefit.
+For each probability threshold (or harm-to-benefit ratio), compute median, maximum, and minimum delta net benefit.
 
 ```{r echo=TRUE, eval = FALSE}
 # Logistic regression
