--- a/vignettes/F.rmd
+++ b/vignettes/F.rmd
@@ -1,7 +1,7 @@
 ---
 title: "F: Display discrimination and calibration"
 author: Marcel Miché
-date: 2023-06-02
+date: 2023-07-31
 output:
   html_document:
     theme: yeti
@@ -30,7 +30,7 @@ Logistic regression was run 100 times, each time a distinct 80% subset of the fu
 
 Discrimination: How good does the logistic regression model classify individuals with the outcome as cases and individuals without the outcome as non-cases?
 
-Both, the area under the receiver operating characteristic curve (auroc), and the precision-recall curve (prauc) summarize discrimination across threshold probabilities. For details, e.g., the relation between auroc and prauc, see Saito and Rehmsmeier, 2023).
+Both, the area under the receiver operating characteristic curve (in the article ROC AUC, here: auroc), and the precision-recall curve (in the article PR AUC, here: prauc) summarize discrimination across threshold probabilities. For details, e.g., the relation between auroc and prauc, see Saito and Rehmsmeier, 2023).
 
 ```{r echo=TRUE, eval = FALSE}
 # Put the results in a data.frame with 2 columns:
@@ -53,8 +53,8 @@ aucDf %>% summarise(
                 max=max))
 )
 # Display results
-aucVec[1:6] # Area under the receiver operating characteristic curve
-aucVec[7:12] # Precision-recall curve
+aucVec[1:6] # Area under the receiver operating characteristic curve (ROC AUC)
+aucVec[7:12] # Precision-recall curve (PR AUC)
 #
 # Output in R console (using the original study data)
 # auroc_min auroc_qut1 auroc_mean auroc_median auroc_qut3 auroc_max
@@ -157,7 +157,6 @@ matrix(
 # Rows 1-7 of the matrix:
 # ----------------------
 # Brier score, calibration intercept, calibration slope, integrated calibration index (ICI), E50, E90, and Emax (e.g., see Austin and Steyerberg, 2019).
-# Austin PC, Steyerberg EW. The Integrated Calibration Index (ICI) and related metrics for quantifying the calibration of logistic regression models. Statistics in Medicine. 2019;38:4051–4065. https://doi.org/10.1002/sim.8281
 #
 # Columns 1-6 of the matrix:
 # -------------------------
@@ -172,6 +171,29 @@ matrix(
 # [6,] 0.0041  0.0089  0.0126  0.0115  0.0156 0.0243
 # [7,] 0.015   0.1166  0.1948  0.1611  0.2588 0.7011
 # --------------------------------------------------
+```
+
+## Scaled Brier score
+Explanation of advantage of the scaled Brier score over the Brier score, see supplementary material 1, Calibration details.
+
+**Beware** The best possible Brier score is 0 (perfect result), whereas for the scaled Brier score, the value 1 is the perfect result. A scaled Brier score of 1 means that all of the prediction error of the null model is explained by the prediction model.
+```{r echo=TRUE, eval = FALSE}
+# Function to compute the Brier score.
+brier <- function(crossValidData) {
+    mean((crossValidData[,"truth"] - crossValidData[,"prob"])**2)
+}
+# Function to compute the scaled Brier score (using the function to compute the Brier score).
+scaled_brier <- function(crossValidData) {
+    1 - (brier(crossValidData) / (mean(crossValidData[,"truth"]) * (1 - mean(crossValidData[,"truth"]))))
+}
+# Formulas for the Brier and the scaled Brier score, see Steyerberg et al. (2010).
+#
+# The function sapply applies a function (here: 'scaled_brier') to each element of a list (here: testSubsampleResults), returning the results as a vector (here: 100 scaled Brier scores).
+scaled_brierScore <- sapply(testSubsampleResults, scaled_brier)
+# Summarize the scaled Brier scores:
+summary(scaled_brierScore)
+#     Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
+# -0.03658  0.03216  0.04849  0.04957  0.06994  0.13369
 ```
 
 ## Visualize calibration
@@ -312,6 +334,8 @@ range(allTestSubsampleResults$prob)
 Austin, P. C., & Steyerberg, E. W. (2019). The Integrated Calibration Index (ICI) and related metrics for quantifying the calibration of logistic regression models. *Statistics in medicine, 38(21)*, 4051-4065, [https://doi.org/10.1002/sim.8281](https://doi.org/10.1002/sim.8281).
 
 Saito, T., & Rehmsmeier, M. (2015). The precision-recall plot is more informative than the ROC plot when evaluating binary classifiers on imbalanced datasets. *PloS one, 10(3)*, e0118432, [https://doi.org/10.1371/journal.pone.0118432](https://doi.org/10.1371/journal.pone.0118432).
+
+Steyerberg, E. W., Vickers, A. J., Cook, N. R., Gerds, T., Gonen, M., Obuchowski, N., ... & Kattan, M. W. (2010). Assessing the performance of prediction models: a framework for some traditional and novel measures. *Epidemiology (Cambridge, Mass.), 21(1)*, 128-138. [http://www.jstor.org/stable/25662818](http://www.jstor.org/stable/25662818)
 
 Package citations, enter in R console: ?predictSuiattPsyCoLaus::predictSuiattPsyCoLaus
 
